--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-textarea-autosize": "^8.5.9",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
